[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Сервис для предоставления driven-data аналитики."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.6"
SQLAlchemy = "^2.0.18"
uvicorn = "^0.22.0"
python-jose = "^3.3.0"
pydantic = "^2.0.2"
pydantic-settings = "^2.0.1"
geopy = "^2.3.0"
pandas = "^2.0.3"
strawberry-graphql = {extras = ["fastapi"], version = "^0.194.4"}
geoalchemy = "^0.7.2"
passlib = "^1.7.4"
websocket = "^0.2.1"
sqlalchemy-utils = "^0.41.1"
geoalchemy2 = "^0.14.0"
shapely = "^2.0.1"
geopandas = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
