[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Dan Sukhorukov <dsuh0i.h8@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.1"
geopandas = "^0.13.2"
folium = "^0.14.0"
streamlit-folium = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
