[tool.poetry]
name = "bmm"
version = "0.1.0"
description = ""
authors = ["Крисанов Роман Валерьевич <284712@niuitmo.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
osmnx = "^1.5.1"
networkx = "^3.1"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
descartes = "^1.1.0"
lxml = "^4.9.3"
orjson = "^3.9.2"
click = "^8.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
